thirdparty/include/libs/raylib55/include/raylib.h

    typedef enum bool { false = 0, true = !false } bool;
// RLVector2, 2 components
typedef struct RLVector2 {
    float x;                // Vector x component
    float y;                // Vector y component
} RLVector2;
// RLVector3, 3 components
typedef struct RLVector3 {
    float x;                // Vector x component
    float y;                // Vector y component
    float z;                // Vector z component
} RLVector3;
// RLColor, 4 components, R8G8B8A8 (32bit)
typedef struct RLColor {
    unsigned char r;        // RLColor red value
    unsigned char g;        // RLColor green value
    unsigned char b;        // RLColor blue value
    unsigned char a;        // RLColor alpha value
} RLColor;
// RLRectangle, 4 components
typedef struct RLRectangle {
    float x;                // RLRectangle top-left corner position x
    float y;                // RLRectangle top-left corner position y
    float width;            // RLRectangle width
    float height;           // RLRectangle height
} RLRectangle;
// RLTexture, tex data stored in GPU memory (VRAM)
typedef struct RLTexture {
    unsigned int id;        // OpenGL texture id
    int width;              // RLTexture base width
    int height;             // RLTexture base height
    int mipmaps;            // Mipmap levels, 1 by default
    int format;             // Data format (RLPixelFormat type)
} RLTexture;
// RLTexture2D, same as RLTexture
typedef RLTexture RLTexture2D;
// RLCamera, defines position/orientation in 3d space
typedef struct RLCamera3D {
    RLVector3 position;       // RLCamera position
    RLVector3 target;         // RLCamera target it looks-at
    RLVector3 up;             // RLCamera up vector (rotation over its axis)
    float fovy;             // RLCamera field-of-view aperture in Y (degrees) in perspective, used as near plane width in orthographic
    int projection;         // RLCamera projection: CAMERA_PERSPECTIVE or CAMERA_ORTHOGRAPHIC
} RLCamera3D;
typedef RLCamera3D RLCamera;    // RLCamera type fallback, defaults to RLCamera3D
// RLCamera system modes
typedef enum {
    CAMERA_CUSTOM = 0,              // RLCamera custom, controlled by user (UpdateCamera() does nothing)
    CAMERA_FREE,                    // RLCamera free mode
    CAMERA_ORBITAL,                 // RLCamera orbital, around target, zoom supported
    CAMERA_FIRST_PERSON,            // RLCamera first person
    CAMERA_THIRD_PERSON             // RLCamera third person
} RLCameraMode;
//------------------------------------------------------------------------------------
// RLCamera System Functions (Module: rcamera)
//------------------------------------------------------------------------------------
RLAPI void UpdateCamera(RLCamera *camera, int mode);      // Update camera position for selected mode
RLAPI void UpdateCameraPro(RLCamera *camera, RLVector3 movement, RLVector3 rotation, float zoom); // Update camera movement/rotation
//------------------------------------------------------------------------------------
// Basic Shapes Drawing Functions (Module: shapes)
//------------------------------------------------------------------------------------
// Set texture and rectangle to be used on shapes drawing
// NOTE: It can be useful when using basic shapes and one single font,
// defining a font char white rectangle would allow drawing everything in a single draw call
RLAPI void SetShapesTexture(RLTexture2D texture, RLRectangle source);       // Set texture and rectangle to be used on shapes drawing
RLAPI RLTexture2D GetShapesTexture(void);                                 // Get texture that is used for shapes drawing
RLAPI RLRectangle GetShapesTextureRectangle(void);                        // Get texture source rectangle that is used for shapes drawing
// Basic shapes drawing functions
RLAPI void DrawPixel(int posX, int posY, RLColor color);                                                   // Draw a pixel using geometry [Can be slow, use with care]
RLAPI void DrawPixelV(RLVector2 position, RLColor color);                                                    // Draw a pixel using geometry (Vector version) [Can be slow, use with care]
RLAPI void DrawLine(int startPosX, int startPosY, int endPosX, int endPosY, RLColor color);                // Draw a line
RLAPI void DrawLineV(RLVector2 startPos, RLVector2 endPos, RLColor color);                                     // Draw a line (using gl lines)
RLAPI void DrawLineEx(RLVector2 startPos, RLVector2 endPos, float thick, RLColor color);                       // Draw a line (using triangles/quads)
RLAPI void DrawLineStrip(const RLVector2 *points, int pointCount, RLColor color);                            // Draw lines sequence (using gl lines)
RLAPI void DrawLineBezier(RLVector2 startPos, RLVector2 endPos, float thick, RLColor color);                   // Draw line segment cubic-bezier in-out interpolation
RLAPI void DrawCircle(int centerX, int centerY, float radius, RLColor color);                              // Draw a color-filled circle
RLAPI void DrawCircleSector(RLVector2 center, float radius, float startAngle, float endAngle, int segments, RLColor color);      // Draw a piece of a circle
RLAPI void DrawCircleSectorLines(RLVector2 center, float radius, float startAngle, float endAngle, int segments, RLColor color); // Draw circle sector outline
RLAPI void DrawCircleGradient(int centerX, int centerY, float radius, RLColor inner, RLColor outer);         // Draw a gradient-filled circle
RLAPI void DrawCircleV(RLVector2 center, float radius, RLColor color);                                       // Draw a color-filled circle (Vector version)
RLAPI void DrawCircleLines(int centerX, int centerY, float radius, RLColor color);                         // Draw circle outline
RLAPI void DrawCircleLinesV(RLVector2 center, float radius, RLColor color);                                  // Draw circle outline (Vector version)
RLAPI void DrawEllipse(int centerX, int centerY, float radiusH, float radiusV, RLColor color);             // Draw ellipse
RLAPI void DrawEllipseLines(int centerX, int centerY, float radiusH, float radiusV, RLColor color);        // Draw ellipse outline
RLAPI void DrawRing(RLVector2 center, float innerRadius, float outerRadius, float startAngle, float endAngle, int segments, RLColor color); // Draw ring
RLAPI void DrawRingLines(RLVector2 center, float innerRadius, float outerRadius, float startAngle, float endAngle, int segments, RLColor color);    // Draw ring outline
RLAPI void DrawRectangle(int posX, int posY, int width, int height, RLColor color);                        // Draw a color-filled rectangle
RLAPI void DrawRectangleV(RLVector2 position, RLVector2 size, RLColor color);                                  // Draw a color-filled rectangle (Vector version)
RLAPI void DrawRectangleRec(RLRectangle rec, RLColor color);                                                 // Draw a color-filled rectangle
RLAPI void DrawRectanglePro(RLRectangle rec, RLVector2 origin, float rotation, RLColor color);                 // Draw a color-filled rectangle with pro parameters
RLAPI void DrawRectangleGradientV(int posX, int posY, int width, int height, RLColor top, RLColor bottom);   // Draw a vertical-gradient-filled rectangle
RLAPI void DrawRectangleGradientH(int posX, int posY, int width, int height, RLColor left, RLColor right);   // Draw a horizontal-gradient-filled rectangle
RLAPI void DrawRectangleGradientEx(RLRectangle rec, RLColor topLeft, RLColor bottomLeft, RLColor topRight, RLColor bottomRight); // Draw a gradient-filled rectangle with custom vertex colors
RLAPI void DrawRectangleLines(int posX, int posY, int width, int height, RLColor color);                   // Draw rectangle outline
RLAPI void DrawRectangleLinesEx(RLRectangle rec, float lineThick, RLColor color);                            // Draw rectangle outline with extended parameters
RLAPI void DrawRectangleRounded(RLRectangle rec, float roundness, int segments, RLColor color);              // Draw rectangle with rounded edges
RLAPI void DrawRectangleRoundedLines(RLRectangle rec, float roundness, int segments, RLColor color);         // Draw rectangle lines with rounded edges
RLAPI void DrawRectangleRoundedLinesEx(RLRectangle rec, float roundness, int segments, float lineThick, RLColor color); // Draw rectangle with rounded edges outline
RLAPI void DrawTriangle(RLVector2 v1, RLVector2 v2, RLVector2 v3, RLColor color);                                // Draw a color-filled triangle (vertex in counter-clockwise order!)
RLAPI void DrawTriangleLines(RLVector2 v1, RLVector2 v2, RLVector2 v3, RLColor color);                           // Draw triangle outline (vertex in counter-clockwise order!)
RLAPI void DrawTriangleFan(const RLVector2 *points, int pointCount, RLColor color);                          // Draw a triangle fan defined by points (first vertex is the center)
RLAPI void DrawTriangleStrip(const RLVector2 *points, int pointCount, RLColor color);                        // Draw a triangle strip defined by points
RLAPI void DrawPoly(RLVector2 center, int sides, float radius, float rotation, RLColor color);               // Draw a regular polygon (Vector version)
RLAPI void DrawPolyLines(RLVector2 center, int sides, float radius, float rotation, RLColor color);          // Draw a polygon outline of n sides
RLAPI void DrawPolyLinesEx(RLVector2 center, int sides, float radius, float rotation, float lineThick, RLColor color); // Draw a polygon outline of n sides with extended parameters
// Splines drawing functions
RLAPI void DrawSplineLinear(const RLVector2 *points, int pointCount, float thick, RLColor color);                  // Draw spline: Linear, minimum 2 points
// Basic shapes collision detection functions
RLAPI bool CheckCollisionRecs(RLRectangle rec1, RLRectangle rec2);                                           // Check collision between two rectangles
RLAPI bool CheckCollisionCircles(RLVector2 center1, float radius1, RLVector2 center2, float radius2);        // Check collision between two circles
RLAPI bool CheckCollisionCircleRec(RLVector2 center, float radius, RLRectangle rec);                         // Check collision between circle and rectangle
RLAPI bool CheckCollisionCircleLine(RLVector2 center, float radius, RLVector2 p1, RLVector2 p2);               // Check if circle collides with a line created betweeen two points [p1] and [p2]
RLAPI bool CheckCollisionPointRec(RLVector2 point, RLRectangle rec);                                         // Check if point is inside rectangle
RLAPI bool CheckCollisionPointCircle(RLVector2 point, RLVector2 center, float radius);                       // Check if point is inside circle
RLAPI bool CheckCollisionPointTriangle(RLVector2 point, RLVector2 p1, RLVector2 p2, RLVector2 p3);               // Check if point is inside a triangle
RLAPI bool CheckCollisionPointLine(RLVector2 point, RLVector2 p1, RLVector2 p2, int threshold);                // Check if point belongs to line created between two points [p1] and [p2] with defined margin in pixels [threshold]
RLAPI bool CheckCollisionPointPoly(RLVector2 point, const RLVector2 *points, int pointCount);                // Check if point is within a polygon described by array of vertices
RLAPI bool CheckCollisionLines(RLVector2 startPos1, RLVector2 endPos1, RLVector2 startPos2, RLVector2 endPos2, RLVector2 *collisionPoint); // Check the collision between two lines defined by two points each, returns collision point by reference
RLAPI RLRectangle GetCollisionRec(RLRectangle rec1, RLRectangle rec2);                                         // Get collision rectangle for two rectangles collision