engine/thirdparty/raylib55.c3i


// Update camera position for selected mode
fn void updateCamera(RLCamera *camera, RLCameraMode mode) @cname("UpdateCamera");
// Update camera position for selected mode
fn void updateCameraPro(RLCamera *camera, RLVector3 movement, RLVector3 rotation, float zoom) @cname("UpdateCameraPro");

//------------------------------------------------------------------------------------
// Basic Shapes Drawing Functions (Module: shapes)
//------------------------------------------------------------------------------------
// Set texture and rectangle to be used on shapes drawing
// NOTE: It can be useful when using basic shapes and one single font,
// defining a font char white rectangle would allow drawing everything in a single draw call
// Set texture and rectangle to be used on shapes drawing
fn void setShapesTexture(RLTexture2D texture, RLRectangle source) @cname("SetShapesTexture");
// Get texture that is used for shapes drawing
fn RLTexture2D getShapesTexture() @cname("GetShapesTexture");
// Get texture source rectangle that is used for shapes drawing
fn RLRectangle getShapesTextureRectangle() @cname("GetShapesTextureRectangle");
// Basic shapes drawing functions
// Draw a pixel
fn void drawPixel(CInt posX, CInt posY, RLColor color) @cname("DrawPixel");
// Draw a pixel (Vector version)
fn void drawPixelV(RLVector2 position, RLColor color) @cname("DrawPixelV");
// Draw a line
fn void drawLine(CInt startPosX, CInt startPosY, CInt endPosX, CInt endPosY, RLColor color) @cname("DrawLine");
// Draw a line (Vector version)
fn void drawLineV(RLVector2 startPos, RLVector2 endPos, RLColor color) @cname("DrawLineV");
// Draw a line defining thickness
fn void drawLineEx(RLVector2 startPos, RLVector2 endPos, float thick, RLColor color) @cname("DrawLineEx");
// Draw lines sequence (using gl lines)
fn void drawLineStrip(RLVector2* points, CInt pointCount, RLColor color) @cname("DrawLineStrip");
// Draw a line using cubic-bezier curves in-out
fn void drawLineBezier(RLVector2 startPos, RLVector2 endPos, float thick, RLColor color) @cname("DrawLineBezier");
// Draw lines sequence
fn void drawCircle(CInt centerX, CInt centerY, float radius, RLColor color) @cname("DrawCircle");
// Draw a piece of a circle
fn void drawCircleSector(RLVector2 center, float radius, float startAngle, float endAngle, CInt segments, RLColor color) @cname("DrawCircleSector");
// Draw circle sector outline
fn void drawCircleSectorLines(RLVector2 center, float radius, float startAngle, float endAngle, CInt segments, RLColor color) @cname("DrawCircleSectorLines");
// Draw a gradient-filled circle
fn void drawCircleGradient(CInt centerX, CInt centerY, float radius, RLColor inner, RLColor outer) @cname("DrawCircleGradient");
// Draw a color-filled circle (Vector version)
fn void drawCircleV(RLVector2 center, float radius, RLColor color) @cname("DrawCircleV");
// Draw circle outline
fn void drawCircleLines(CInt centerX, CInt centerY, float radius, RLColor color) @cname("DrawCircleLines");
// Draw circle outline (Vector version)
fn void drawCircleLinesV(RLVector2 center, float radius, RLColor color) @cname("DrawCircleLinesV");
// Draw ellipse
fn void drawEllipse(CInt centerX, CInt centerY, float radiusH, float radiusV, RLColor color) @cname("DrawEllipse");
// Draw ellipse outline
fn void drawEllipseLines(CInt centerX, CInt centerY, float radiusH, float radiusV, RLColor color) @cname("DrawEllipseLines");
// Draw ring
fn void drawRing(RLVector2 center, float innerRadius, float outerRadius, float startAngle, float endAngle, CInt segments, RLColor color) @cname("DrawRing");
// Draw ring outline
fn void drawRingLines(RLVector2 center, float innerRadius, float outerRadius, float startAngle, float endAngle, CInt segments, RLColor color) @cname("DrawRingLines");
// Draw a color-filled rectangle
fn void drawRectangle(CInt posX, CInt posY, CInt width, CInt height, RLColor color) @cname("DrawRectangle");
// Draw a color-filled rectangle (Vector version)
fn void drawRectangleV(RLVector2 position, RLVector2 size, RLColor color) @cname("DrawRectangleV");
// Draw a color-filled rectangle
fn void drawRectangleRec(RLRectangle rec, RLColor color) @cname("DrawRectangleRec");
// Draw a color-filled rectangle with pro parameters
fn void drawRectanglePro(RLRectangle rec, RLVector2 origin, float rotation, RLColor color) @cname("DrawRectanglePro");
// Draw a vertical-gradient-filled rectangle
fn void drawRectangleGradientV(CInt posX, CInt posY, CInt width, CInt height, RLColor top, RLColor bottom) @cname("DrawRectangleGradientV");
// Draw a horizontal-gradient-filled rectangle
fn void drawRectangleGradientH(CInt posX, CInt posY, CInt width, CInt height, RLColor left, RLColor right) @cname("DrawRectangleGradientH");
// Draw a gradient-filled rectangle with custom vertex colors
fn void drawRectangleGradientEx(RLRectangle rec, RLColor topLeft, RLColor bottomLeft, RLColor topRight, RLColor bottomRight) @cname("DrawRectangleGradientEx");
// Draw rectangle outline
fn void drawRectangleLines(CInt posX, CInt posY, CInt width, CInt height, RLColor color) @cname("DrawRectangleLines");
// Draw rectangle outline with extended parameters
fn void drawRectangleLinesEx(RLRectangle rec, float lineThick, RLColor color) @cname("DrawRectangleLinesEx");
// Draw rectangle with rounded edges
fn void drawRectangleRounded(RLRectangle rec, float roundness, CInt segments, RLColor color) @cname("DrawRectangleRounded");
// Draw rectangle lines with rounded edges
fn void drawRectangleRoundedLines(RLRectangle rec, float roundness, CInt segments, float lineThick, RLColor color) @cname("DrawRectangleRoundedLines");
// Draw rectangle with rounded edges outline
fn void drawRectangleRoundedLinesEx(RLRectangle rec, float roundness, CInt segments, float lineThick, RLColor color) @cname("DrawRectangleRoundedLinesEx");
// Draw a color-filled triangle (vertex in counter-clockwise order!)
fn void drawTriangle(RLVector2 v1, RLVector2 v2, RLVector2 v3, RLColor color) @cname("DrawTriangle");
// Draw triangle outline (vertex in counter-clockwise order!)
fn void drawTriangleLines(RLVector2 v1, RLVector2 v2, RLVector2 v3, RLColor color) @cname("DrawTriangleLines");
// Draw a triangle fan defined by points (first vertex is the center)
fn void drawTriangleFan(RLVector2 *points, CInt pointCount, RLColor color) @cname("DrawTriangleFan");
// Draw a triangle strip defined by points
fn void drawTriangleStrip(RLVector2 *points, CInt pointCount, RLColor color) @cname("DrawTriangleStrip");
// Draw a regular polygon (Vector version)
fn void drawPoly(RLVector2 center, CInt sides, float radius, float rotation, RLColor color) @cname("DrawPoly");
// Draw a polygon outline of n sides
fn void drawPolyLines(RLVector2 center, CInt sides, float radius, float rotation, RLColor color) @cname("DrawPolyLines");
// Draw a polygon outline of n sides with extended parameters
fn void drawPolyLinesEx(RLVector2 center, CInt sides, float radius, float rotation, float lineThick, RLColor color) @cname("DrawPolyLinesEx");

// Splines drawing functions
// Draw spline: Linear, minimum 2 points
fn void drawSplineLinear(RLVector2 *points, CInt pointCount, float thick, RLColor color) @cname("DrawSplineLinear");
// Draw spline: B-Spline, minimum 4 points
fn void drawSplineBasis(RLVector2 *points, CInt pointCount, float thick, RLColor color);
// Draw spline: Catmull-Rom, minimum 4 points
fn void drawSplineCatmullRom(RLVector2 *points, CInt pointCount, float thick, RLColor color);
// Draw spline: Quadratic Bezier, minimum 3 points (1 control point): [p1, c2, p3, c4...]
fn void drawSplineBezierQuadratic(RLVector2 *points, CInt pointCount, float thick, RLColor color);
// Draw spline: Cubic Bezier, minimum 4 points (2 control points): [p1, c2, c3, p4, c5, c6...]
fn void drawSplineBezierCubic(RLVector2 *points, CInt pointCount, float thick, RLColor color);
// Draw spline segment: Linear, 2 points
fn void drawSplineSegmentLinear(RLVector2 p1, RLVector2 p2, float thick, RLColor color);
// Draw spline segment: B-Spline, 4 points
fn void drawSplineSegmentBasis(RLVector2 p1, RLVector2 p2, RLVector2 p3, RLVector2 p4, float thick, RLColor color);
// Draw spline segment: Catmull-Rom, 4 points
fn void drawSplineSegmentCatmullRom(RLVector2 p1, RLVector2 p2, RLVector2 p3, RLVector2 p4, float thick, RLColor color);
// Draw spline segment: Quadratic Bezier, 2 points, 1 control point
fn void drawSplineSegmentBezierQuadratic(RLVector2 p1, RLVector2 c2, RLVector2 p3, float thick, RLColor color);
// Draw spline segment: Cubic Bezier, 2 points, 2 control points
fn void drawSplineSegmentBezierCubic(RLVector2 p1, RLVector2 c2, RLVector2 c3, RLVector2 p4, float thick, RLColor color);

// Spline segment point evaluation functions, for a given t [0.0f .. 1.0f]
// Get (evaluate) spline point: Linear
fn RLVector2 getSplinePointLinear(RLVector2 startPos, RLVector2 endPos, float t);
// Get (evaluate) spline point: B-Spline
fn RLVector2 getSplinePointBasis(RLVector2 p1, RLVector2 p2, RLVector2 p3, RLVector2 p4, float t);
// Get (evaluate) spline point: Catmull-Rom
fn RLVector2 getSplinePointCatmullRom(RLVector2 p1, RLVector2 p2, RLVector2 p3, RLVector2 p4, float t);
// Get (evaluate) spline point: Quadratic Bezier
fn RLVector2 getSplinePointBezierQuad(RLVector2 p1, RLVector2 c2, RLVector2 p3, float t);
// Get (evaluate) spline point: Cubic Bezier
fn RLVector2 getSplinePointBezierCubic(RLVector2 p1, RLVector2 c2, RLVector2 c3, RLVector2 p4, float t);

// Basic shapes collision detection functions
// Check collision between two rectangles
fn bool checkCollisionRecs(RLRectangle rec1, RLRectangle rec2) @cname("CheckCollisionRecs");
// Check collision between two circles
fn bool checkCollisionCircles(RLVector2 center1, float radius1, RLVector2 center2, float radius2) @cname("CheckCollisionCircles");
// Check collision between circle and rectangle
fn bool checkCollisionCircleRec(RLVector2 center, float radius, RLRectangle rec) @cname("CheckCollisionCircleRec");
// Check if circle collides with a line created betweeen two points [p1] and [p2]
fn bool checkCollisionCircleLine(RLVector2 center, float radius, RLVector2 p1, RLVector2 p2) @cname("CheckCollisionCircleLine");
// Check if point is inside rectangle
fn bool checkCollisionPointRec(RLVector2 point, RLRectangle rec) @cname("CheckCollisionPointRec");
// Check if point is inside circle
fn bool checkCollisionPointCircle(RLVector2 point, RLVector2 center, float radius) @cname("CheckCollisionPointCircle");
// Check if point is inside a triangle
fn bool checkCollisionPointTriangle(RLVector2 point, RLVector2 p1, RLVector2 p2, RLVector2 p3) @cname("CheckCollisionPointTriangle");
// Check if point belongs to line created between two points [p1] and [p2] with defined margin in pixels [threshold]
fn bool checkCollisionPointLine(RLVector2 point, RLVector2 p1, RLVector2 p2, CInt threshold) @cname("CheckCollisionPointLine");
// Check if point is within a polygon described by array of vertices
fn bool checkCollisionPointPoly(RLVector2 point, RLVector2 *points, CInt pointCount) @cname("CheckCollisionPointPoly");
// Check the collision between two lines defined by two points each, returns collision point by reference
fn bool checkCollisionLines(RLVector2 startPos1, RLVector2 endPos1, RLVector2 startPos2, RLVector2 endPos2, RLVector2 *collisionPoint) @cname("CheckCollisionLines");
// Get collision rectangle for two rectangles collision
fn RLRectangle getCollisionRec(RLRectangle rec1, RLRectangle rec2) @cname("GetCollisionRec");

//------------------------------------------------------------------------------------
// RLTexture Loading and Drawing Functions (Module: textures)
//------------------------------------------------------------------------------------
